# stocks

./: .gitignore  Cargo.toml  README.md  Settings.toml  list_stocks.txt  stocks.db
src/: main.rs  persistance.rs  repository.rs  server.rs  stocks.rs  stocks_api.rs
src/repository/: error.rs  market.rs  stock.rs
src/repository/market/: market_db.rs  market_sqlite.rs
src/repository/stock/: stock_api.rs  stock_db.rs  stock_sqlite.rs
