[package]
name = "stocks"
version = "0.1.0"
authors = ["Albert Viaplana <pichi.pride@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
hyper-tls = "0.4.1"
rusqlite = "0.23.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
tokio = { version = "0.2", features = ["full"] }