[package]
name = "stocks"
version = "0.1.0"
authors = ["Albert Viaplana <pichi.pride@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
bus = "2.2.3"
crossbeam-channel = "0.4.2"
env_logger = "0.7.1"
hyper = "0.13.5"
hyper-tls = "0.4.1"
log = "0.4"
r2d2="0.8.8"
r2d2_sqlite="0.15.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
tokio = { version = "0.2", features = ["full"] }